# orchestration_CI_CD

./: .coverage  .dockerignore  .gitignore  Projet_1_bases.md  Projet_2_Orchestration.md  README.md  README.template.md  SECRETS.txt  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: deploy_docker.yml  documentation.yml  extract.yml  ruff.yml  secrets.yml  test.yml
app/: main.py
app/modules/: mon_module.py
app_api/: Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml
app_api/data/: index.rst  moncsv.csv  test.yml
app_api/models/: models.py
app_api/modules/: db_tools.py  df_tools.py
app_api/tests/: test_main.py
app_front/: .coverage  Dockerfile  README.md  README.template.md  docker-compose.yml  main.py  pyproject.toml
app_front/pages/: 0_insert.py  1_read.py
app_front/tests/: test_0_insert.py  test_1_read.py  test_app_front.py
docs/source/: app_api.main.rst  app_api.maths.mon_module.rst  app_api.maths.rst  app_api.models.models.rst  app_api.models.rst  app_api.modules.connect.rst  app_api.modules.crud.rst  app_api.modules.db_tools.rst  app_api.modules.df_tools.rst  app_api.modules.rst  app_api.rst  app_front.main.rst  app_front.rst  conf.py  index.rst  modules.rst
tests/: test_1_read.py  test_api_db_tools.py  test_api_main.py  test_app_front.py  test_front_0_insert.py  test_main.py
