[project]
name = "app-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "pandas>=1.4.0,<3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["app_api"] 
testpaths = ["../tests"]
python_files = ["test_api_*.py"]

[tool.coverage.run]
# On définit explicitement la racine de recherche du code
source = ["./app_api"]
# On ignore tout ce qui n'est pas dans app_api (au cas où)
omit = [
    "./app_front/*",
    "app_front/*",
    "./tests/*",
    "tests/*"
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
