[project]
name = "app-front"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]
[tool.pytest.ini_options]
pythonpath = ["."] 
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
